{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 203,
  "lineage": "a7f8de0b-e570-9054-302d-fdf235b2c743",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136674127410:vpc/vpc-09385aecb3a5db178",
            "cidr_block": "10.0.0.0/20",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06378bb542a6d2305",
                "cidr_block": "10.0.0.0/20",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-088666e4e78da1ff3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09385aecb3a5db178",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a991b292a5055e50",
            "owner_id": "136674127410",
            "tags": {
              "Name": "opsfleet-test-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.jump-box",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:136674127410:instance/i-051c8987a338aa74a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051c8987a338aa74a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "opsfleet-eks-worker-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0714430898683aeda",
            "private_dns": "ip-10-0-0-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.106",
            "public_dns": "ec2-184-73-104-46.compute-1.amazonaws.com",
            "public_ip": "184.73.104.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:136674127410:key/32cb290e-3786-4502-976e-007d91115a06",
                "throughput": 0,
                "volume_id": "vol-0740789d15b5dfa2e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07be1d69595fa9258",
            "tags": {
              "Name": "opsfleet-jump-box"
            },
            "tags_all": {
              "Name": "opsfleet-jump-box"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ecdaf554a3903c7"
            ]
          },
          "dependencies": [
            "data.aws_ami.latest-ubuntu",
            "module.jump-box.null_resource.kms_key_arn_dependency_getter",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136674127410:security-group/sg-076a56d092b492cea",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS Master Nodes to communicate with the EKS Generic Compute Worker Nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89f2ddbc7ae07d"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS Master Nodes to communicate with the EKS Generic Compute Worker Nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89f2ddbc7ae07d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS Master Nodes to communicate with the cluster API Server",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Minimum Requirement",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "id": "sg-076a56d092b492cea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS Generic Compute Worker Nodes to communicate with the Master",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89f2ddbc7ae07d"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS Generic Compute Worker Nodes to communicate with the Master",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89f2ddbc7ae07d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow External Jump Box to communicate with the Master",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ecdaf554a3903c7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Mininum Requirement",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Mininum Requirement",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "opsfleet-eks-master-sg",
            "name_prefix": "",
            "owner_id": "136674127410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "opsfleet EKS Master SG"
            },
            "tags_all": {
              "Name": "opsfleet EKS Master SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09385aecb3a5db178"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_node_groups_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136674127410:security-group/sg-03b89f2ddbc7ae07d",
            "description": "Security group for generic compute nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow Generic Compute Worker Nodes to communicate with the EKS Generic Compute Worker Nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow Generic Compute Worker Nodes to communicate with the EKS Generic Compute Worker Nodes",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Allow Generic Compute Worker Nodes to communicate with the EKS Master Nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076a56d092b492cea"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-03b89f2ddbc7ae07d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Internal Jump Box to communicate with the Generic Compute Worker Nodes",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ecdaf554a3903c7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Recommended",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-076a56d092b492cea"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "opsfleet-generic-compute-sg",
            "name_prefix": "",
            "owner_id": "136674127410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "opsfleet EKS Generic Compute Target Group SG",
              "kubernetes.io/cluster/dev": "owned"
            },
            "tags_all": {
              "Name": "opsfleet EKS Generic Compute Target Group SG",
              "kubernetes.io/cluster/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09385aecb3a5db178"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_jumpbox_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136674127410:security-group/sg-02ecdaf554a3903c7",
            "description": "Security Group for JumpBox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all the resources to talk to VPCE",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allows external jumpBox to SSH into EKS Generic Compute Worker Nodes",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89f2ddbc7ae07d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allows external jumpBox to connect to EKS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076a56d092b492cea"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-02ecdaf554a3903c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows everyone to connect with the External JumpBox",
                "from_port": 37689,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 37689
              }
            ],
            "name": "opsfleet-external-jumpbox-sg",
            "name_prefix": "",
            "owner_id": "136674127410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "opsfleet External JumpBox SG"
            },
            "tags_all": {
              "Name": "opsfleet External JumpBox SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09385aecb3a5db178"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136674127410:security-group/sg-0fe46a4368f7ec973",
            "description": "Security Group for VPCE",
            "egress": [],
            "id": "sg-0fe46a4368f7ec973",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "Allows all the resources to talk to VPCE",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "opsfleet-vpce-sg",
            "name_prefix": "",
            "owner_id": "136674127410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "opsfleet Stack VPCE SG"
            },
            "tags_all": {
              "Name": "opsfleet Stack VPCE SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09385aecb3a5db178"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow External Jump Box to communicate with the Master",
            "from_port": 443,
            "id": "sgrule-2978910314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-0ce996127667d436c",
            "self": false,
            "source_security_group_id": "sg-02ecdaf554a3903c7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Generic Compute Worker Nodes to communicate with the Master",
            "from_port": 443,
            "id": "sgrule-330387628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-0a26c0ce388499abb",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Generic Compute Worker Nodes to communicate with the Master",
            "from_port": 0,
            "id": "sgrule-2269659651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-02e04ee5f851c34dd",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Mininum Requirement",
            "from_port": 10250,
            "id": "sgrule-3879499680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-0dbcc6e291c495a46",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Mininum Requirement",
            "from_port": 443,
            "id": "sgrule-1255103357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-005da1f38bb0e0cd6",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Minimum Requirement",
            "from_port": 443,
            "id": "sgrule-3422355587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-005da1f38bb0e0cd6",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Master Nodes to communicate with the EKS Generic Compute Worker Nodes",
            "from_port": 443,
            "id": "sgrule-2458061650",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-097a7488f3df2c85d",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Master Nodes to communicate with the cluster API Server",
            "from_port": 1024,
            "id": "sgrule-2449719588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-0a269bc89f50a2860",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Master Nodes to communicate with the EKS Generic Compute Worker Nodes",
            "from_port": 1024,
            "id": "sgrule-3414018805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a56d092b492cea",
            "security_group_rule_id": "sgr-011ea7e70e0cb154a",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_worker_node_groups_one_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Generic Compute Worker Nodes to communicate with the EKS Master Nodes",
            "from_port": 443,
            "id": "sgrule-171533172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b89f2ddbc7ae07d",
            "security_group_rule_id": "sgr-0a25eca0cd1c0f5c9",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Generic Compute Worker Nodes to communicate with the EKS Generic Compute Worker Nodes",
            "from_port": 443,
            "id": "sgrule-1397188773",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b89f2ddbc7ae07d",
            "security_group_rule_id": "sgr-0f97d9abe2cf8fe86",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Generic Compute Worker Nodes to communicate with the EKS Generic Compute Worker Nodes",
            "from_port": 8443,
            "id": "sgrule-2595993993",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b89f2ddbc7ae07d",
            "security_group_rule_id": "sgr-0efbf00c449d24446",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 8443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_worker_node_groups_one_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Recommended",
            "from_port": 0,
            "id": "sgrule-672246239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03b89f2ddbc7ae07d",
            "security_group_rule_id": "sgr-058dacc0d3c1ebff2",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Recommended",
            "from_port": 0,
            "id": "sgrule-1903141390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03b89f2ddbc7ae07d",
            "security_group_rule_id": "sgr-0a95de57f3ecb62c9",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Internal Jump Box to communicate with the Generic Compute Worker Nodes",
            "from_port": 22,
            "id": "sgrule-3168113847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b89f2ddbc7ae07d",
            "security_group_rule_id": "sgr-030099fd3e3b8d375",
            "self": false,
            "source_security_group_id": "sg-02ecdaf554a3903c7",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "external_jump_box_cidr_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allows all the resources to talk to VPCE",
            "from_port": 0,
            "id": "sgrule-1101555780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ecdaf554a3903c7",
            "security_group_rule_id": "sgr-00a55d286631d7166",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "external_jumpbox_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allows external jumpBox to SSH into EKS Generic Compute Worker Nodes",
            "from_port": 22,
            "id": "sgrule-3229581615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ecdaf554a3903c7",
            "security_group_rule_id": "sgr-031d1f01ae6af950a",
            "self": false,
            "source_security_group_id": "sg-03b89f2ddbc7ae07d",
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allows external jumpBox to connect to EKS",
            "from_port": 443,
            "id": "sgrule-1705683296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ecdaf554a3903c7",
            "security_group_rule_id": "sgr-0f85b21da913b6626",
            "self": false,
            "source_security_group_id": "sg-076a56d092b492cea",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.eks_cluster",
            "module.security-group.aws_security_group.eks_worker_node_groups_one",
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "external_jumpbox_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allows everyone to connect with the External JumpBox",
            "from_port": 37689,
            "id": "sgrule-2009854113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ecdaf554a3903c7",
            "security_group_rule_id": "sgr-012153d337603acc4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 37689,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.external_jumpbox_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpce_cidr_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/20"
            ],
            "description": "Allows all the resources to talk to VPCE",
            "from_port": 443,
            "id": "sgrule-3597711739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe46a4368f7ec973",
            "security_group_rule_id": "sgr-08d3de771114f6722",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.security-group.aws_security_group.vpce_sg",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}